--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,10 @@
         "classmap": [
             "database/seeds",
             "database/factories"
-        ]
+        ],
+    "files":[
+        "app/Helpers/Helper.php"
+    ]
     },
     "autoload-dev": {
         "psr-4": {
